--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         
 
     <title>종로철거 명동철거 을지로철거</title>
-    <meta name="description" content="서울중구철거업체,신당동철거비용,필동,광희동철거견적,북창동인테리어,원상복구">
-    <meta name="keywords" content="서울중구철거업체,신당동철거비용,필동,광희동철거견적,북창동인테리어,원상복구">
+    <meta name="description" content="서울중구철거업체,신당동철거비용,필동,광희동철거견적,북창동인테리어,종로구사무실철거,종로구상가철거,칸막이철거,내부철거,식당철거전문">
+    <meta name="keywords" content="서울중구철거업체,신당동철거비용,필동,광희동철거견적,북창동인테리어,종로구사무실철거,종로구상가철거,칸막이철거,내부철거,식당철거전문">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://cg24.hitweb114.com">
     <meta property="og:title" content="종로철거 명동철거 을지로철거">
     <meta property="og:site_name" content="종로철거 명동철거 을지로철거">
-    <meta property="og:description" content="서울중구철거업체,신당동철거비용,필동,광희동철거견적,북창동인테리어,원상복구">
+    <meta property="og:description" content="서울중구철거업체,신당동철거비용,필동,광희동철거견적,북창동인테리어,종로구사무실철거,종로구상가철거,칸막이철거,내부철거,식당철거전문">
     <link rel="alternate" type="application/rss+xml" href="http://cg24.hitweb114.com/feed.xml">
 
     <!-- Stylesheet -->
